2007-06-29  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/urlencode.c: Removed URLDECODE_RELAXED ifdef as not needed
	  any more. Plus, it made ns_urldecode/ns_urlencode unsymetric.

2007-06-28  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/adprequest.c: Don't try to close a NULL conn.

	* nsd/adpcmds.c:
	* nsd/tclcmds.c:
	* tcl/compat.tcl: Add a couple of missing ADP commands (ns_adp_close,
	ns_adp_flush) to the list. Remove a couple of deprecated commands
	(ns_adp_stream, ns_adp_compress) and add Tcl implementations to
	compat.tcl. Clean up the arg parsing of the ADP commands in adpcmds.c.

	* doc/src/ns_adp_compress.man: (deleted)
	* doc/src/ns_adp_stream.man: (deleted)

	* tests/adp.test: Add a couple of more ADP tests (ns_adp_ctl,
	ns_adp_append, ns_adp_puts, ns_adp_eval, ...).

2007-06-27  Stephen Deasey  <sdeasey@gmail.com>

	* doc/src/ns_ictl.man: (deleted)
	* doc/src/ns_cleanup.man: (deleted)
	* doc/src/ns_cleanupchans.man: (deleted)
	* doc/src/ns_eval.man: (deleted)
	* doc/src/ns_init.man: (deleted)
	* doc/src/ns_reinit.man: (deleted)
	* doc/src/ns_markfordelete.man: (deleted)
	* doc/src/mann/ns_ictl.man: Update interp documentation.

2007-06-26  Stephen Deasey  <sdeasey@users.sf.net>

	* nslog/nslog.c: Add missing space before appending 'referer' log entry.

2007-06-25  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/config.c: An uninitialised variable was being read in a
	non-critical logging routine.

	* include/nsthread.h: Don't protect inttypes.h with an ifdef in a public
	header as unfortunately this will never be picked up from the private
	config.h. Explicitly include stdint.h which doesn't get dragged in by
	other means on freebsd.

	* include/ns.h:
	* nsd/Makefile:
	* nsd/dsprintf.c (removed):
	* nsd/dstring.c: Implement Ns_DStringVPrintf() using OS vsnprintf() to
	pick up modern format specifiers and bug fixes (dsprintf.c was 7 year
	old NetBSD code).

	This is similar to the old AOLserver 3.x implementation except that